Resolves: tdf#88672 add missing return if error to not crash

Change-Id: Iae73c46d6ae5b141c3f5680b2623ee06205c22d2