sc/source/core/tool/interpr1.cxx
@@ -5496,6 +5496,7 @@ double ScInterpreter::IterateParametersIfs( ScIterFuncIfs eFunc )
                         if (!pMainMatrix)
                         {
                             SetError( errIllegalParameter);
+                            return 0;
                         }
                         nMainCol1 = 0;
                         nMainRow1 = 0;
